AM_CFLAGS = -fno-strict-aliasing -Wall -Wextra -Wpedantic -Wwrite-strings

sbin_PROGRAMS = sniproxy

sniproxy_SOURCES = sniproxy.c \
                   address.c \
                   address.h \
                   backend.c \
                   backend.h \
                   binder.c \
                   binder.h \
                   buffer.c \
                   buffer.h \
                   cfg_parser.c \
                   cfg_parser.h \
                   cfg_tokenizer.c \
                   cfg_tokenizer.h \
                   config.c \
                   config.h \
                   connection.c \
                   connection.h \
                   http.c \
                   http.h \
                   listener.c \
                   listener.h \
                   logger.c \
                   logger.h \
                   protocol.h \
                   resolv.c \
                   resolv.h \
                   table.c \
                   table.h \
                   tls.c \
                   tls.h
